force-app/main/default/objects/ace_File__c/ace_File__c.object-meta.xml
<CustomObject>
    <description>Contains metadata associated to a file. This metadata persists even when the file itself is deleted.</description>
    <label>Shared File</label>
    <nameField>
        <displayFormat>af-{000000}</displayFormat>
        <label>File ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shared Files</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>