force-app/main/default/objects/ace_File__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Commentary about the file itself.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter comments regarding this file.</inlineHelpText>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>