force-app/main/default/objects/ace_File__c/fields/Consent__c.field-meta.xml
<CustomField>
    <fullName>Consent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Uploaded files linked to consents.</description>
    <label>Consent</label>
    <referenceTo>Consent__c</referenceTo>
    <relationshipLabel>Shared Files</relationshipLabel>
    <relationshipName>Shared_Files</relationshipName>
    <type>Lookup</type>
</CustomField>