force-app/main/default/objects/ace_File__c/fields/DateDeleted__c.field-meta.xml
<CustomField>
    <fullName>DateDeleted__c</fullName>
    <description>When a file is removed from Salesforce, this field will capture the date and approximate time of deletion.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>When was this file removed from Salesforce?</inlineHelpText>
    <label>Date Deleted</label>
    <type>DateTime</type>
</CustomField>