force-app/main/default/objects/ace_File__c/fields/DeletionReason__c.field-meta.xml
<CustomField>
    <fullName>DeletionReason__c</fullName>
    <description>When a file is deleted, this field records the mechanism by which the file was removed from the system.</description>
    <inlineHelpText>How was this file deleted from Salesforce?</inlineHelpText>
    <label>Deletion Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>