force-app/main/default/objects/ace_File__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>JIRA:AGMPB-249</description>
    <label>Engagement</label>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipName>A_Files</relationshipName>
    <type>Lookup</type>
</CustomField>