force-app/main/default/objects/ace_File__c/fields/Engagement_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>JIRA:AGMPB-272</description>
    <label>Engagement Assignee</label>
    <referenceTo>Engagement_Assignee__c</referenceTo>
    <relationshipName>A_Files</relationshipName>
    <type>Lookup</type>
</CustomField>