force-app/main/default/objects/ace_File__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <description>JIRA:AGMPB-437</description>
    <encryptionScheme>None</encryptionScheme>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>