force-app/main/default/objects/ace_File__c/fields/File_Size_Display__c.field-meta.xml
<CustomField>
    <fullName>File_Size_Display__c</fullName>
    <description>JIRA:AGMPB-774</description>
    <formula>IF(File_Size__c &lt; 1048576, 
   TEXT(ROUND( File_Size__c / 1024, 2)) &amp; &apos; KB&apos;, 
   TEXT(ROUND(File_Size__c / 1048576, 2)) &amp; &apos; MB&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>File Size Display</label>
    <type>Text</type>
</CustomField>