force-app/main/default/objects/ace_File__c/fields/File_Type__c.field-meta.xml
<CustomField>
    <fullName>File_Type__c</fullName>
    <description>JIRA:AGMPB-437</description>
    <encryptionScheme>None</encryptionScheme>
    <label>File Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>