force-app/main/default/objects/ace_File__c/fields/First_File_Download_By_External_User_On__c.field-meta.xml
<CustomField>
    <fullName>First_File_Download_By_External_User_On__c</fullName>
    <description>Identifies the date when the external user first downloaded this file. This should be populated via an implementation of a custom download function.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>First File Download By External User On</label>
    <type>Date</type>
</CustomField>