force-app/main/default/objects/ace_File__c/fields/Individual__c.field-meta.xml
<CustomField>
    <fullName>Individual__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the Person Account individual</description>
    <label>Individual</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Individual</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Shared Files</relationshipLabel>
    <relationshipName>Shared_Files</relationshipName>
    <type>Lookup</type>
</CustomField>