force-app/main/default/objects/ace_File__c/fields/Information_Request__c.field-meta.xml
<CustomField>
    <fullName>Information_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Information Request</label>
    <referenceTo>Information_Request__c</referenceTo>
    <relationshipName>Files</relationshipName>
    <type>Lookup</type>
</CustomField>