force-app/main/default/objects/ace_File__c/fields/Internal_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Internal_Review_Date__c</fullName>
    <description>When was this file reviewed?</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Internal Review Date</label>
    <type>Date</type>
</CustomField>