force-app/main/default/objects/ace_File__c/fields/Internal_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Internal_Review_Status__c</fullName>
    <description>Describes the status of an Ace File prior to sharing it externally with customer users.</description>
    <label>Internal Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>