force-app/main/default/objects/ace_File__c/fields/Internal_Visibility__c.field-meta.xml
<CustomField>
    <fullName>Internal_Visibility__c</fullName>
    <description>Used by internal Andersen users to indicate who a Shared File record should be shared with.</description>
    <label>Internal Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Firms on Engagement</fullName>
            </value>
            <value>
                <fullName>Coordinating Country</fullName>
            </value>
            <value>
                <fullName>Country-Specific</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>