force-app/main/default/objects/ace_File__c/fields/Is_Internally_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Is_Internally_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies when the file linked to a record was internally uploaded. This supports identifying how files should be shared and processes for removal of files from the system.</description>
    <label>Is Internally Uploaded</label>
    <type>Checkbox</type>
</CustomField>