force-app/main/default/objects/ace_File__c/fields/OriginalEntityContentDocumentKey__c.field-meta.xml
<CustomField>
    <fullName>OriginalEntityContentDocumentKey__c</fullName>
    <description>The concatentation of of the content document Id that the shared file associates to as well as the original linked entity.  Used in querying for Shared files where the content document Id is known.  This is relevant when a file is initially uploaded to another object and needs to be reparented.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>OriginalEntityContentDocumentKey</label>
    <length>36</length>
    <type>Text</type>
</CustomField>