force-app/main/default/objects/ace_File__c/fields/Other_Country__c.field-meta.xml
<CustomField>
    <fullName>Other_Country__c</fullName>
    <description>Used by portal users to specify a country not available in the picklist made available to them in the portal (based on related Subscribed Offices to the Engagement they are associated with).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>