force-app/main/default/objects/ace_File__c/fields/Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who reviewed this file prior to sharing?</description>
    <label>Reviewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>A_Files</relationshipName>
    <type>Lookup</type>
</CustomField>