force-app/main/default/objects/ace_File__c/fields/ScheduledRemovalDate__c.field-meta.xml
<CustomField>
    <fullName>ScheduledRemovalDate__c</fullName>
    <description>Describes the date at which point this file may be removed from the system via automated processes.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>When is this file scheduled to be deleted?</inlineHelpText>
    <label>Scheduled Removal Date</label>
    <type>Date</type>
</CustomField>