force-app/main/default/objects/ace_File__c/fields/Shared_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Shared_File_Name__c</fullName>
    <description>JIRA:AGMPB-774</description>
    <formula>HYPERLINK(
  LEFT(
    $Api.Partner_Server_URL_260,
    FIND(&apos;/services&apos;, $Api.Partner_Server_URL_260)
  ) &amp; &apos;/&apos; &amp; Id,
  IF(
    NOT(ISBLANK(File_Name__c)),
    File_Name__c &amp;
      IF(
        NOT(ISBLANK(File_Type__c)),
        &quot;.&quot; &amp; File_Type__c,
        Name
      ),
    Name
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shared File Name</label>
    <type>Text</type>
</CustomField>