force-app/main/default/objects/ace_File__c/fields/Subscribed_Office__c.field-meta.xml
<CustomField>
    <fullName>Subscribed_Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This links the Shared File to a specific office, so the office can see it,.</description>
    <label>Subscribed Office</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>If there is an Engagement related to a Shared File, only Subscribed Office related to the same engagement can be added.</errorMessage>
        <filterItems>
            <field>$Source.Engagement__c</field>
            <operation>equals</operation>
            <valueField>Subscribed_Offices__c.Engagement__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Engagement__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Subscribed_Offices__c</referenceTo>
    <relationshipLabel>Shared Files</relationshipLabel>
    <relationshipName>Shared_Files</relationshipName>
    <type>Lookup</type>
</CustomField>