force-app/main/default/objects/ace_File__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Origin__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assignment Letter</fullName>
            </value>
            <value>
                <fullName>Authorization List</fullName>
            </value>
            <value>
                <fullName>Certificate of Coverage</fullName>
            </value>
            <value>
                <fullName>Consultation Summary</fullName>
            </value>
            <value>
                <fullName>Cover Letter</fullName>
            </value>
            <value>
                <fullName>Federal Tax Return</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Posted Worker Directive</fullName>
            </value>
            <value>
                <fullName>Questionnaire</fullName>
            </value>
            <value>
                <fullName>State/Provincial Tax Return</fullName>
            </value>
            <value>
                <fullName>Supporting document</fullName>
            </value>
            <value>
                <fullName>Tax Equalization</fullName>
            </value>
            <value>
                <fullName>Tax Notice</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Tax Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>