force-app/main/default/objects/ace_File__c/fields/Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>Upload_Date__c</fullName>
    <description>JIRA:AGMPB-437</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Upload Date</label>
    <type>DateTime</type>
</CustomField>