force-app/main/default/objects/ace_File__c/fields/Uploaded_By__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who uploaded the file attached to this record?</description>
    <label>Uploaded By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UploadedFiles</relationshipName>
    <type>Lookup</type>
</CustomField>