force-app/main/default/objects/ace_File__c/fields/Uploaded_by_Name__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_by_Name__c</fullName>
    <description>AGMPB-867</description>
    <formula>IF( ISBLANK(Uploaded_By__r.MiddleName) , Uploaded_By__r.FirstName + &quot; &quot; + Uploaded_By__r.LastName, Uploaded_By__r.FirstName + &quot; &quot; + Uploaded_By__r.MiddleName + &quot; &quot; + Uploaded_By__r.LastName )</formula>
    <label>Uploaded by</label>
    <type>Text</type>
</CustomField>