force-app/main/default/objects/ace_File__c/fields/Work_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Work_Authorization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Authorization</label>
    <referenceTo>Work_Authorization__c</referenceTo>
    <relationshipName>A_Files</relationshipName>
    <type>Lookup</type>
</CustomField>