force-app/main/default/objects/ace_File__c/fields/Work_Record__c.field-meta.xml
<CustomField>
    <fullName>Work_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Record</label>
    <referenceTo>Work_Record__c</referenceTo>
    <relationshipName>Files</relationshipName>
    <type>Lookup</type>
</CustomField>