force-app/main/default/objects/ace_File__c/fields/Work_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Work_Record_Name__c</fullName>
    <description>AGMPB-867</description>
    <formula>Work_Record__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Record Name</label>
    <type>Text</type>
</CustomField>