force-app/main/default/objects/ace_File__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Shared_File_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Description__c</columns>
    <columns>Work_Record__c</columns>
    <columns>File_Size_Display__c</columns>
    <columns>Upload_Date__c</columns>
    <columns>Uploaded_By__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>