force-app/main/default/objects/ace_File__c/listViews/Tax_Returns.listView-meta.xml
<ListView>
    <fullName>Tax_Returns</fullName>
    <columns>Shared_File_Name__c</columns>
    <columns>File_Name__c</columns>
    <columns>Description__c</columns>
    <columns>Work_Record__c</columns>
    <columns>File_Type__c</columns>
    <columns>File_Size_Display__c</columns>
    <columns>Upload_Date__c</columns>
    <columns>Uploaded_By__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Federal Tax Return,State/Provincial Tax Return</value>
    </filters>
    <label>Tax Returns</label>
</ListView>